--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Homepage: http://www.jolicloud.org
 
 Package: jolicloud-launcher
 Architecture: all
+Pre-depends: apt-queue, jolicloud-notifier (>>1.0.0~)
 Depends: ${shlibs:Depends}, ${misc:Depends}, jolicloud-daemon, nickel-browser
 Replaces: jolicloud-webapp-jolicloud-launcher
 Provides: jolicloud-webapp-jolicloud-launcher
