--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: jolicloud-launcher
 Section: jolicloud/misc
 Priority: extra
 Maintainer: Jolicloud developers <developers@jolicloud.org>
-Build-Depends: debhelper (>= 7)
+Build-Depends: debhelper (>= 7), git-core
 Standards-Version: 3.8.0
 Homepage: http://www.jolicloud.org
 
