--- a/debian/control
+++ b/debian/control
@@ -10,8 +10,8 @@ Vcs-Browser: https://github.com/jolicloud/jolicloud-launcher
 
 Package: jolicloud-launcher
 Architecture: all
-Pre-depends: apt-queue, jolicloud-notifier (>>1.0.0~)
-Depends: ${shlibs:Depends}, ${misc:Depends}, jolicloud-daemon, nickel-browser, liblogger-syslog-perl, libwww-perl
+Depends: ${shlibs:Depends}, ${misc:Depends}, jolicloud-daemon, nickel-browser,
+ liblogger-syslog-perl, libwww-perl, libnet-dbus-perl
 Replaces: jolicloud-webapp-jolicloud-launcher
 Provides: jolicloud-webapp-jolicloud-launcher, netbook-launcher
 Conflicts: jolicloud-webapp-jolicloud-launcher
